--- a/package.json
+++ b/package.json
@@ -4,11 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "postcss -c postcss.json -w",
-    "watch": "postcss -c postcss.json -w",
-    "build": "postcss -c postcss.json"
+    "start": "postcss src/css/*.css -d css -w",
+    "watch": "postcss src/css/*.css -d css -w",
+    "build": "postcss src/css/*.css -d css "
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "postcss": {
+    "plugins": {
+      "postcss-flexbugs-fixes": {},
+      "postcss-custom-properties": {},
+      "postcss-nesting": {},
+      "postcss-custom-media": {},
+      "postcss-pseudo-class-any-link": {},
+      "postcss-apply": {},
+      "postcss-color-function": {},
+      "autoprefixer": {
+        "browsers": ["last 2 versions", "ie >= 11", "ios >= 6", "android >= 4.0"]
+      },
+      "postcss-reporter": {
+        "clearReportedMessages": true
+      }
+    }
+  }
 }
