--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "preinstall": "npm i -g postcss-cli@3 autoprefixer@7 postcss-flexbugs-fixes@3 postcss-custom-properties@6 postcss-nesting@2 postcss-custom-media@6 postcss-pseudo-class-any-link@4 postcss-apply@0.8 postcss-reporter@4 postcss-color-function@3",
+    "preinstall": "npm i -g postcss-cli@4 autoprefixer@7 postcss-flexbugs-fixes@3 postcss-custom-properties@6 postcss-nesting@4 postcss-custom-media@6 postcss-pseudo-class-any-link@4 postcss-apply@0.8 postcss-reporter@4 postcss-color-function@4",
     "start": "postcss src/css/*.css -d css -w",
     "watch": "postcss src/css/*.css -d css -w",
-    "build": "postcss src/css/*.css -d css "
+    "build": "postcss src/css/*.css -d css"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +22,12 @@
       "postcss-apply": {},
       "postcss-color-function": {},
       "autoprefixer": {
-        "browsers": ["last 2 versions", "ie >= 11", "ios >= 6", "android >= 4.0"]
+        "browsers": [
+          "last 2 versions",
+          "ie >= 11",
+          "ios >= 6",
+          "android >= 4.0"
+        ]
       },
       "postcss-reporter": {
         "clearReportedMessages": true
