--- a/package.json
+++ b/package.json
@@ -1,37 +1,25 @@
 {
-  "name": "fe-stylekit",
-  "version": "1.1.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "preinstall": "npm i -g postcss-cli@4 autoprefixer@7 postcss-flexbugs-fixes@3 postcss-custom-properties@6 postcss-nesting@4 postcss-custom-media@6 postcss-pseudo-class-any-link@4 postcss-apply@0.8 postcss-reporter@4 postcss-color-function@4",
-    "start": "postcss src/css/*.css -d css -w",
-    "watch": "postcss src/css/*.css -d css -w",
-    "build": "postcss src/css/*.css -d css"
+  "name": "@pamlab/stylekit",
+  "version": "5.0.1",
+  "description": "Frontend Stylekit base on PostCSS.",
+  "bin": {
+    "stylekit": "bin/app.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "postcss": {
-    "plugins": {
-      "postcss-flexbugs-fixes": {},
-      "postcss-custom-properties": {},
-      "postcss-nesting": {},
-      "postcss-custom-media": {},
-      "postcss-pseudo-class-any-link": {},
-      "postcss-apply": {},
-      "postcss-color-function": {},
-      "autoprefixer": {
-        "browsers": [
-          "last 2 versions",
-          "ie >= 11",
-          "ios >= 6",
-          "android >= 4.0"
-        ]
-      },
-      "postcss-reporter": {
-        "clearReportedMessages": true
-      }
-    }
+  "author": "hirofumii",
+  "license": "MIT",
+  "dependencies": {
+    "argv": "0.0.2",
+    "autoprefixer": "^7.2.5",
+    "chokidar": "^2.0.0",
+    "postcss": "^6.0.16",
+    "postcss-apply": "^0.8.0",
+    "postcss-color-function": "^4.0.1",
+    "postcss-custom-media": "^6.0.0",
+    "postcss-custom-properties": "^6.2.0",
+    "postcss-flexbugs-fixes": "^3.2.0",
+    "postcss-nesting": "^4.2.1",
+    "postcss-pseudo-class-any-link": "^4.0.0",
+    "postcss-reporter": "^4.0.0"
   }
 }
