--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "keywords": [],
   "author": "hirofumii",
+  "homepage": "https://github.com/pamlab/fe-stylekit",
   "license": "MIT",
   "dependencies": {
     "argv": "0.0.2",
